app-repos/industry40/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: industry40
  labels:
    kubernetes.io/metadata.name: industry40
