app-repos/industry40/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: industry40
  namespace: industry40
  labels:
    app: industry40
spec:
  selector:
    app: industry40
  ports:
    - name: http
      port: 80
      targetPort: 80
