app-repos/industry40/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: industry40
  namespace: industry40
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: industry40.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: industry40
                port:
                  number: 80
